# ReVogue

./: .gitignore  package-lock.json  package.json
agent/: .env.example  README.md  agent.py  pyproject.toml
client/: index.html  package.json  tailwind.config.js
client/src/: App.jsx  index.css  main.jsx
server/: .env.example  app.js  config.js  db.js  index.js  package.json
server/constants/: aiStylist.js  auth.js  conversation.js  index.js  messages.js  product.js  roles.js  seed.js  validation.js
server/controllers/: adminBrandController.js  adminCategoryController.js  adminDonationController.js  adminProductController.js  authController.js  brandController.js  cartController.js  categoryController.js  conversationController.js  donationController.js  healthController.js  orderController.js  paymentController.js  productController.js  vendorProductController.js  wardrobeController.js
server/middleware/: auth.js  errorHandler.js
server/models/: Brand.js  Cart.js  Category.js  Conversation.js  Donation.js  Message.js  Order.js  Payment.js  Product.js  User.js  WardrobeItem.js
server/routes/: admin.js  auth.js  brands.js  cart.js  categories.js  conversations.js  donations.js  index.js  orders.js  payments.js  products.js  vendor.js  wardrobe.js
server/scripts/: assignOutfitSlots.js  backfillEmbeddings.js  seedAdmin.js  seedDb.js  seedEmbeddings.js  seedLuxury.js  seedProductEcoMetrics.js  seedProducts.js  seedVendorProducts.js  updateLuxuryProductImages.js  updateNormalProductImages.js
server/services/: aiStylistService.js  authService.js  (+10 more)
(+49 files in other folders)
